--- a/LightTube/wwwroot/css/lighttube.css
+++ b/LightTube/wwwroot/css/lighttube.css
@@ -1282,6 +1282,9 @@ input#comments-toggle {
     flex-wrap: wrap;
     row-gap: 16px;
     column-gap: 4px;
+    justify-content: center;
+    gap: 8px;
+    padding: 8px 0;
 }
 
 /* Playlist Page */
