--- a/LightTube/Views/Youtube/Channel.cshtml
+++ b/LightTube/Views/Youtube/Channel.cshtml
@@ -57,12 +57,42 @@
 				<partial name="Renderers/Channel/ChannelHome" model="(Model.Content, Model.Localization)"/>
 			</div>
 			break;
-		case ChannelTabs.Videos or ChannelTabs.Streams or ChannelTabs.Community:
+		case ChannelTabs.Community:
 		{
 			<div class="channel-content search-container">
-				@foreach (RendererContainer renderer in Model.Content.Where(x => x.Type != "continuation"))
+				@foreach (RendererContainer renderer in Model.Content.SelectMany(x => x.Type == "container" ? ((ContainerRendererData)x.Data).Items : [x]).Where(x => x.Type != "continuation"))
 				{
-					<partial name="Renderer" model="(renderer, Model.Localization)"/>
+					CommunityPostRendererData post = (CommunityPostRendererData)renderer.Data;
+					<div class="renderer-backstagepostthreadrenderer">
+						<div class="post-avatar">
+							<img loading="lazy" src="@post.Author.Avatar?.LastOrDefault()?.Url" alt="@post.Author.Title">
+						</div>
+						<div class="post-info">
+							<a href="/channel/@post.Author.Id" class="post-author">@post.Author.Title</a>
+							<span>
+								@@post.PublishedText
+							</span>
+						</div>
+						<div class="post-content">
+							<div>
+								@Html.Raw(post.Content)
+							</div>
+							@if (post.Attachment is not null)
+							{
+								<partial name="Renderers/PostAttachmentRenderer" model="(post.Attachment, Model.Localization)"/>
+							}
+							<div class="post-buttons">
+								<svg class="bi" width="20" height="20" fill="currentColor">
+									<use xlink:href="/svg/bootstrap-icons.svg#hand-thumbs-up-fill"/>
+								</svg>
+								@post.LikeCount
+								&nbsp;&nbsp;
+								<a href="https://youtube.com/post/@post.PostId">
+									Open on YouTube
+								</a>
+							</div>
+						</div>
+					</div>
 				}
 			</div>
 			break;
