--- a/LightTube/Views/Shared/Player.cshtml
+++ b/LightTube/Views/Shared/Player.cshtml
@@ -80,16 +80,16 @@ else if ((Model.UseHls || Model.UseDash) && !Model.Player.Formats.Any())
 	<video controls id="player" class="player @(Model.GetClass())" poster="@Model.Thumbnails.LastOrDefault()?.Url">
 		@if (Configuration.ProxyEnabled)
 		{
-			@foreach (Format format in Model.GetFormatsInPreferredOrder())
+			foreach (Format format in Model.GetFormatsInPreferredOrder())
 			{
-				@:<source label="@format.QualityLabel" type="@format.Mime" src="@format.Url"> 
+				@:<source label="@format.QualityLabel" type="@format.Mime" src="/proxy/media/@Model.Player.Details.Id/@format.Itag">
 			}
 		}
 		else
 		{
-			@foreach (Format format in Model.GetFormatsInPreferredOrder())
+			foreach (Format format in Model.GetFormatsInPreferredOrder())
 			{
-				@:<source label="@format.QualityLabel" type="@format.Mime" src="/proxy/media/@Model.Player.Details.Id/@format.Itag"> 
+				@:<source label="@format.QualityLabel" type="@format.Mime" src="@format.Url">
 			}
 		}
 
@@ -105,16 +105,16 @@ else if (Model.Player.Formats.Any())
 	<video controls id="player" class="player @(Model.GetClass())" poster="@Model.Thumbnails.LastOrDefault()?.Url">
 		@if (Configuration.ProxyEnabled)
 		{
-			@foreach (Format format in Model.GetFormatsInPreferredOrder())
+			foreach (Format format in Model.GetFormatsInPreferredOrder())
 			{
-				@:<source label="@format.QualityLabel" type="@format.Mime" src="@format.Url"> 
+				@:<source label="@format.QualityLabel" type="@format.Mime" src="/proxy/media/@Model.Player.Details.Id/@format.Itag">
 			}
 		}
 		else
 		{
-			@foreach (Format format in Model.GetFormatsInPreferredOrder())
+			foreach (Format format in Model.GetFormatsInPreferredOrder())
 			{
-				@:<source label="@format.QualityLabel" type="@format.Mime" src="/proxy/media/@Model.Player.Details.Id/@format.Itag"> 
+				@:<source label="@format.QualityLabel" type="@format.Mime" src="@format.Url">
 			}
 		}
 
