--- a/LightTube/wwwroot/css/lighttube.css
+++ b/LightTube/wwwroot/css/lighttube.css
@@ -1105,9 +1105,8 @@ input#comments-toggle {
 
 @media screen and (max-width: 700px) {
     .filters-button {
-        width: calc(100% - 32px) !important;
-        margin: 0 16px;
-        padding: 0;
+        margin-right: 16px;
+        padding-left: 16px;
     }
 }
 
