Make the comments not overscroll to the recommendations

--- a/LightTube/wwwroot/css/lighttube.css
+++ b/LightTube/wwwroot/css/lighttube.css
@@ -1014,6 +1014,10 @@ input#comments-toggle {
         overflow-y: scroll;
     }
 
+    input#comments-toggle:checked ~ .second-column {
+        display: none;
+    }
+
     .comments-container {
         position: absolute;
         left: 0;
