Fix community posts

--- a/LightTube/Views/Shared/Renderers/SearchRenderer.cshtml
+++ b/LightTube/Views/Shared/Renderers/SearchRenderer.cshtml
@@ -138,7 +138,7 @@
 				<div>
 					<span class="postrenderer-author__name">@post.Author.Title</span>
 					•
-					<span class="postrenderer-author__date">@@post.PublishDateText</span>
+					<span class="postrenderer-author__date">@post.PublishedText</span>
 				</div>
 			</div>
 			<div class="postrenderer-content">
