--- a/LightTube/Views/Youtube/Channel.cshtml
+++ b/LightTube/Views/Youtube/Channel.cshtml
@@ -70,7 +70,7 @@
 						<div class="post-info">
 							<a href="/channel/@post.Author.Id" class="post-author">@post.Author.Title</a>
 							<span>
-								@@post.PublishedText
+								@post.PublishedText
 							</span>
 						</div>
 						<div class="post-content">
