hey look - a place to get a nullreferenceexception!

--- a/LightTube/Views/Shared/Renderers/SearchRenderer.cshtml
+++ b/LightTube/Views/Shared/Renderers/SearchRenderer.cshtml
@@ -148,7 +148,7 @@
 				@if (post.Attachment?.Data is CommunityPostImageRendererData image)
 				{
 					<div class="postrenderer-content__attachment">
-						<img src="@image.Images.First().LastOrDefault().Url"/>
+						<img src="@image.Images.First().LastOrDefault()?.Url"/>
 					</div>
 				}
 			</div>
