--- a/LightTube/Views/Shared/_Layout.cshtml
+++ b/LightTube/Views/Shared/_Layout.cshtml
@@ -30,7 +30,14 @@
 <body class="@(Model.GuideHidden ? "app-container no-guide" : "app-container")">
 <div class="@(Context.Request.Path.Value == "/results" ? "top-bar search" : "top-bar")">
 	<a class="logo" href="/">
-		Light<b>Tube</b>
+		@if (Configuration.IsNightly)
+		{
+			@:Nightly<b>Tube</b>
+		}
+		else
+		{
+			@:Light<b>Tube</b>
+		}
 		<sup class="hide-on-mobile region" title="@Model.Localization.GetString("layout.region")">
 			@Context.GetInnerTubeRegion()
 		</sup>
