--- a/LightTube/Views/Youtube/Channel.cshtml
+++ b/LightTube/Views/Youtube/Channel.cshtml
@@ -143,7 +143,7 @@
 									@post.LikeCount
 									&nbsp;&nbsp;
 									<a href="https://youtube.com/post/@post.PostId">
-										Open on YouTube
+										@Model.Localization.GetString("post.view.youtube")
 									</a>
 								</div>
 							</div>
