--- a/LightTube/Views/Shared/Renderers/SearchRenderer.cshtml
+++ b/LightTube/Views/Shared/Renderers/SearchRenderer.cshtml
@@ -135,6 +135,12 @@
 			@((Model.Renderer.Data as MessageRendererData)?.Message)
 		</div>
 		break;
+	case "exception":
+		ExceptionRendererData e = (ExceptionRendererData)Model.Renderer.Data;
+		<div class="renderer-null">
+			<code>@e.Message</code> while converting <code>@e.RendererCase</code>
+		</div>
+		break;
 	case "unknown":
 		<div>
 			<div>Unknown RendererContainer.OriginalType: <code>@Model.Renderer.OriginalType</code></div>
