--- a/LightTube/Views/Youtube/Playlist.cshtml
+++ b/LightTube/Views/Youtube/Playlist.cshtml
@@ -51,41 +51,52 @@
 		}
 		@foreach (RendererContainer renderer in Model.Items)
 		{
-			PlaylistVideoRendererData video = (PlaylistVideoRendererData)renderer.Data;
-			<div class="renderer-playlistvideorenderer">
-				<div class="playlist-item-index">
-					@video.VideoIndexText
-				</div>
-				@{
-					Context.Request.Query.TryGetValue("list", out StringValues l);
-				}
-				<a href="/watch?v=@video.VideoId[..11]&list=@l" class="compact-thumbnail">
-					<img loading="lazy" src="@video.Thumbnails.LastOrDefault()?.Url" alt="@video.Title"/>
-					<div class="compact-thumbnail__duration__container">
-						<span class="compact-thumbnail__duration">@video.Duration.ToDurationString()</span>
-					</div>
-				</a>
-				<div class="info">
-					<a href="/watch?v=@video.VideoId[..11]&list=@l" title="@video.Title" class="ml-2 title">@video.Title</a>
-					@if (video.Author != null)
-					{
-						<div class="ml-2">
-							<a href="/channel/@video.Author.Id" title="@video.Author.Title">@video.Author.Title</a>
+			switch (renderer.Type)
+			{
+				case "video":
+					PlaylistVideoRendererData video = (PlaylistVideoRendererData)renderer.Data;
+					<div class="renderer-playlistvideorenderer">
+						<div class="playlist-item-index">
+							@video.VideoIndexText
 						</div>
-					}
-				</div>
-				<div class="flex-divider"></div>
-				<div class="icon-button-container">
-					@if (video.VideoId.Length > 11)
-					{
-						<a href="/removeFromPlaylist?v=@video.VideoId&list=@l" class="icon-button" target="_blank">
-							<svg class="icon" width="20" height="20" fill="currentColor">
-								<use xlink:href="/svg/bootstrap-icons.svg#trash"/>
-							</svg>
+						@{
+							Context.Request.Query.TryGetValue("list", out StringValues l);
+						}
+						<a href="/watch?v=@video.VideoId[..11]&list=@l" class="compact-thumbnail">
+							<img loading="lazy" src="@video.Thumbnails.LastOrDefault()?.Url" alt="@video.Title"/>
+							<div class="compact-thumbnail__duration__container">
+								<span class="compact-thumbnail__duration">@video.Duration.ToDurationString()</span>
+							</div>
 						</a>
-					}
-				</div>
-			</div>
+						<div class="info">
+							<a href="/watch?v=@video.VideoId[..11]&list=@l" title="@video.Title" class="ml-2 title">@video.Title</a>
+							@if (video.Author != null)
+							{
+								<div class="ml-2">
+									<a href="/channel/@video.Author.Id" title="@video.Author.Title">@video.Author.Title</a>
+								</div>
+							}
+						</div>
+						<div class="flex-divider"></div>
+						<div class="icon-button-container">
+							@if (video.VideoId.Length > 11)
+							{
+								<a href="/removeFromPlaylist?v=@video.VideoId&list=@l" class="icon-button" target="_blank">
+									<svg class="icon" width="20" height="20" fill="currentColor">
+										<use xlink:href="/svg/bootstrap-icons.svg#trash"/>
+									</svg>
+								</a>
+							}
+						</div>
+					</div>
+					break;
+				case "exception":
+					ExceptionRendererData e = (ExceptionRendererData)renderer.Data;
+					<div class="renderer-null">
+						<code>@e.Message</code> while converting <code>@e.RendererCase</code>
+					</div>
+					break;
+			}
 		}
 	</div>
 </div>
