Fix broken html tags in video titles

--- a/LightTube/Views/Youtube/Watch.cshtml
+++ b/LightTube/Views/Youtube/Watch.cshtml
@@ -47,7 +47,7 @@
 </div>
 <div class="info-container">
 	<div class="ml-2 title">
-		@Model.Video.Title
+		@Html.Raw(Model.Video.Title)
 	</div>
 	<div class="buttons">
 		<div class="interaction-buttons">
